# simple_logger

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.py
logger/: CMakeLists.txt  logger.cpp  logger.h
scripts/: build.py
tests/: CMakeLists.txt  main.cpp
